# c-coding-challenges

./: .gitignore  Dockerfile  Makefile  README.md  users.csv
1. fizz buzz/: CMakeLists.txt  Makefile  README.md  c_cpp_properties.json  devcontainer.json
1. fizz buzz/.devcontainer/: Dockerfile  devcontainer.json
1. fizz buzz/include/utils/: print.h
1. fizz buzz/src/: main.c
1. fizz buzz/src/utils/: print.c
1. fizz_buzz/tests/: test_main.c  test_shon.c
1_fizz_buzz/src/: main.c
src/: main.c
